<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PicaPoco_1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="registration_title">Registrieren</string>
    <string name="email_input_title">E-Mail-Adresse</string>
    <string name="Password_input_title">Passwort</string>
    <string name="Username_input_title">Nutzername</string>
    <string name="toggle_infotext">Ja, akzeptiere die AGBs.</string>
    <string name="registerButton_text">Kostenlos  registrieren</string>
    <string name="forgotPassword_title">Neues Passwort</string>
    <string name="requestPasswordButton_text">Neues Passwort anfordern</string>
    <string name="login_title">Login</string>
    <string name="forgotPasswordText">Passwort vergessen?</string>
    <string name="loginButton_text">Einloggen</string>
    <string name="facebookLoginText">Facebook-Login</string>
    <string name="newUserRegisterText">Neu hier? Jetzt kostenlos registrieren.</string>
    <string name="editBookTitleText">HINWEIS: Der Titel wird auf den Buchrücken gedruckt.</string>
    <string name="mydiamonds_title">Meine Diamanten</string>
    <string name="editTextActivity_title">Text hinzufügen</string>
    <string name="myDiamonds">Meine Diamanten</string>
    <string name="staticDiamondsValue">12.555</string>
    <string name="myDiamondsInfo">Einlösen von Diamanten \nKurzer Text Rabattsystem? Lorem ipsum dolor sit amet, consetetur \nsadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et \ndolore magna aliquyam erat, sed diam voluptua. </string>
    <string name="friendRequest_title">Freundschaftsanfrage</string>
    <string name="friendRequestDetail1">Möchtest Du</string>
    <string name="StaticfriendRequestDetail1">Max Mustermann</string>
    <string name="friendRequestDetail2">als Deinen Freund hinzufügen?</string>
    <string name="addFriendButton_text">Als Freund hinzufügen</string>
    <string name="myProfile_title">MEIN PROFIL</string>
    <string name="profilePic">Profile picture</string>
    <string name="profileFriendsTitle">Freunde</string>
    <string name="profileDesignTitle">Designs</string>
    <string name="profileFriendRequestTitle">Offene Anfragen</string>
    <string name="staticDesignCount">4</string>
    <string name="staticFriendRequestCount">1</string>
    <string name="staticFriendsCount">16</string>
    <string name="staticUserEmail">user@mustermail.de</string>
    <string name="profileEmailLabel">E-Mail</string>
    <string name="profileUserNameLabel">Nutzername</string>
    <string name="staticUserName">Persil</string>
    <string name="staticUserGender">männlich</string>
    <string name="profileGenderLabel">Geschlecht</string>
    <string name="profileAgeLabel">Alter</string>
    <string name="staticUserAge">24 Jahre</string>
    <string name="profileLocationLabel">Wohnort</string>
    <string name="staticUserLocation">Musterstadt</string>
    <string name="staticUserGenderFemale">weiblich</string>
    <string name="foreignProfile_title">PROFIL VON HANS</string>
    <string name="RespondFriendRequestText">Hallo, ich finde Deine eFotobücher toll und würde Dich gerne \n in meine Freundesliste aufnehmen.</string>
    <string name="rejectRequest">Ablehnen</string>
    <string name="acceptRequest">Annehmen</string>
    <string name="InfoandPrice">Lorem ipsum dolor sit amet.\nconsetetur sadipscing elitr, sed diam nonumy\neirmod tempor invidunt ut labore et dolore magna aliquyam erat,\nsed diam voluptua. At vero eos et accusam et justo duo\ndolores et ea rebum. Stet clita kasd gubergren, no sea\ntakimata sanctus est Lorem ipsum dolor sit amet. Lorem\nipsum dolor sit amet, consetetur sadipscing elitr, sed diam\nnonumy eirmod tempor invidunt ut labore et dolore magna\naliquyam erat\n\nsed diam voluptua. 
At vero eos et accusam et justo duo dolores et ea rebum.\nStet clita kasd gubergren, no sea takimata sanctus est\nLorem ipsum dolor sit amet.</string>
    <string name="Info_title">Infos &amp; Preise</string>
    <string name="myFriends_title">MEINE FREUNDE</string>
    <string name="foreignFriends_title">Persil\'s FREUNDE</string>
    <string name="staticUserGender_Age">männlich, 24 Jahre</string>
    <string name="share_title">Design mit Freunden teilen</string>
    <string name="sharePublicText">Design öffentlich teilen  |  + 500 Diamanten</string>
    <string name="shareWithFriends">Design mit allen Freunden teilen  |  + 200 Diamanten</string>
    <string name="ShareWithNonMember">Mit Personen teilen, die noch kein Mitglied sind</string>
    <string name="adressbuchString">Adressbuch</string>
    <string name="SharePrivat">Privat</string>
    <string name="menu_publicDesigns">Öffentliche Designs</string>
    <string name="menu_friendDesigns">Designs von Freunden</string>
    <string name="menu_myDesigns">Meine Designs</string>
    <string name="menu_Profile">Mein Profil</string>
    <string name="menu_Diamonds">Meine Diamanten</string>
    <string name="menu_Friends">Meine Freunde</string>
    <string name="menu_Info">Infos &amp; Preise</string>
    <string name="menu_Logout">Abmelden</string>
    <string name="menu_Login">Anmelden</string>
    <string name="staticAlbumTitle">1001 Nacht</string>
    <string name="publicAlbumAllowModify">Öffentliche und für Freunde freigegebene designs können von Anderen\nangeschaut und/oder gedruckt, aber nicht verändert werden.</string>
    <string name="share_terms">Ich stimme den &lt;a href="" style="text-decoration: none&#059;">AGBs&lt;/a> zu. Weiterhin versichere, dass alle\nabgebildeten Personen mit einer Veröffentlichung\neinverstanden sind und alle Bildrechte bei mir liegen.</string>

    <!-- Alert Dialog Texts -->
    <string name="designer_alert">Diese Seite wird von unseren \n Grafikern neu gestaltet.</string>
    <string name="delete_text_alert">Dieses TextBild wird von der Seite gelöscht.</string>
    <string name="delete_image_alert">Dieses Bild wird von der Seite gelöscht.</string>

    <!-- print page 1 Texts -->
    <string name="print_page_one_heading">Drucken</string>
    <string name="print_size">Grösse</string>
    <string name="print_size_a4">A4</string>
    <string name="print_size_a3">A3</string>
    <string name="cover">Cover</string>
    <string name="cover_hard">Hardcover</string>
    <string name="cover_soft">Softcover</string>
    <string name="paper">Papier</string>
    <string name="paper_matt">Seidenmatt</string>
    <string name="paper_glossy">Hochglanz</string>

    <!-- print page 2 Texts -->
    <string name="print_page_two_heading">Buch zum Druk freigeben</string>
    <string name="including_book_design">Buch inkl. Design</string>
    <string name="off_by_diamonds">Rabatt durch Diamanten</string>
    <string name="shipping">Versand</string>
    <string name="total_amount">Gesamtbetrag</string>
    <string name="address">Anschrift (keine Packstation möglich)</string>
    <string name="male">Herr</string>
    <string name="female">Frau</string>
    <string name="firstName">Vorname:</string>
    <string name="lastName">Nachname:</string>
    <string name="company">Firma (Optional) :</string>
    <string name="road">Strasse:</string>
    <string name="no">Nr:</string>
    <string name="zip">PLZ:</string>
    <string name="Location">Ort:</string>
    <string name="Country">Land:</string>
    <string name="euro">EUR</string>

    <string-array name="quantitySpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="loremipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="sort_title">Seitenfolge ändern</string>
    <string name="ShareHintText">Hallo, kennst Du schon Picapoco? Du kannst Dir dort kostenlos\nFotobücher gestalten lassen und Deine schönsten Erinnerungen\nmit Freunden teilen. Schau mal, dieses Design habe ich gestalten\nlassen.</string>

    <!-- Uploader Screen Strings -->

    <string name="make_free_desing">Kostenlos gestalten lassen</string>
    <string name="view_or_print_album">Fotobuch ansehen / drucken</string>
    <string name="more_info">Mehr Informationen</string>
    <string name="more">Weiter</string>
    <string name="style">Style</string>
    <string name="format">Format</string>
    <string name="imagepickerdefault">0 Fotos gewahlt | Mehr Fotos Wahlen</string>
    <string name="selectall">Alle wählen</string>
    <string name="selectnone">Keine wählen</string>
    <string name="logout">Logout</string>
    <string name="survey">übersicht</string>
    <string name="logged_in_as">Eingeloggt als</string>
    <string name="back">Zurück</string>

    <string-array name="seitenitems">
        <item>24</item>
        <item>56</item>
    </string-array>

    <!-- Album catalog strings -->
    <string name="albumCatalogActivity_detail"> Dezent, elegant und traditionell auf schwarzem Fotopapier.\nIdeal für besondere Anlässe wie Hochzeiten, Konfirmationen etc. </string>
    <string name="klassichCatalogActivity_detail"> Stilvoll, variabel und doch besonders dank vieler Hintergrundfotos. \nVerwendbar für jeden Anlass. </string>
    <string name="modernCatalogActivity_detail">Kraftvoll und außergewöhnlich dank des modernen Leinenhintergrundes. \n</string>
    <string name="frischCatalogActivity_detail"> Dynamisch, mutig und einzigartig. \nDas etwas andere Fotobuch mit besonderen Effekten. </string>
    <string name="fotopurCatalogActivity_detail">100% reiner Fotogenuss ohne wenn und aber. \nIdeal für besonders hochwertige Aufnahmen. </string>
    <string name="vintageCatalogActivity_detail">Ihr Fotobuch wie vor 70 Jahren! Kontrastreich in Schwarz-Weiss gehalten.\n Ideal für zeitlose Erinnerungen. </string>

</resources>