<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_bg"
    android:orientation="horizontal"
    android:paddingBottom="12dp"
    android:paddingTop="14dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TrashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="14dp"
            android:background="@drawable/trash_selector"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:background="@drawable/picture_bg_frame"
            android:padding="8dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profilePic"
                android:src="@drawable/sample_pic" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/UsernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/staticUserName"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/Gender_AgeTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/staticUserGender_Age"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/LocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/staticUserLocation"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Designs_Friends_LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/profileDesignTitle"
                android:textSize="12sp" />

            <FrameLayout
                android:id="@+id/DesignFrameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:background="@drawable/profile_btn"
                android:clickable="true" >

                <TextView
                    android:id="@+id/DesignCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/staticDesignCount"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:orientation="vertical"
            android:paddingTop="2dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/profileFriendsTitle"
                android:textSize="12sp" />

            <FrameLayout
                android:id="@+id/FriendsFrameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:background="@drawable/profile_btn"
                android:clickable="true" >

                <TextView
                    android:id="@+id/FriendCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/staticFriendsCount"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/addFriendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/add_friend_selector"
        android:visibility="gone" />

</LinearLayout>