<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgotPassword_title"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/header_seperator" />

    <TextView
        android:id="@+id/Email_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/email_input_title"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/Email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="E-Mail Adresse"
        android:inputType="textEmailAddress"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/body_seperator" />

    <TextView
        android:id="@+id/requestPasswordButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_blue_large"
        android:gravity="center"
        android:text="@string/requestPasswordButton_text"
        android:textColor="@android:color/white" />

</LinearLayout>